--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "firebase-tools": "^11.16.1",
     "rxjs": "~7.5.0",
     "zone.js": "~0.12.0"
   },
